@@ -27,8 +27,8 @@
 The following new features and notable changes since v 0.23.0 are included in this release:
 
 - [New binaries and changes to supported environments](#binaries-and-supported-environments)
-- [`-Xsyslog` replaces `-Xlog` option by default](#-xsyslog-replaces-xlog-option-by-default-xlog-behavior-change)
-- [Support the `JAVA_OPTIONS` environment variable](#support-the-java_options-environment-variable)
+- [Changes to message logging](#changes-to-message-logging)
+- [Support for the `JAVA_OPTIONS` environment variable](#support-for-the-java_options-environment-variable)
 - [`-XX:[+|-]PortableSharedCache` option behavior update](#-xx-portablesharedcache-option-behavior-update)
 - [![Start of content that applies to AIX Java 15+](cr/java15plus.png) `-XX:[+|-]ShareAnonymousClasses` option behavior update](#-xx-shareanonymousclasses-option-behavior-update)
 
@@ -45,29 +45,30 @@ OpenJ9 release 0.24.0 supports OpenJDK 8, 11, and 15. Binaries are available fro
 
 To learn more about support for OpenJ9 releases, including OpenJDK levels and platform support, see [Supported environments](openj9_support.md).
 
-### `-Xsyslog` replaces `-Xlog` option by default, `-Xlog` behavior change
+### Changes to message logging
 
-Following the introduction of [JEP 158](https://openjdk.java.net/jeps/158) and to avoid confusion with the reference implementation, the [`-Xsyslog`](xsyslog.md) option supersedes the OpenJ9 [`-Xlog`](xlog.md) option for message logging. A new option, [`-XX:[+|-]LegacyXlogOption`](xxlegacyxlogoption.md) controls how the `-Xlog` option is processed when set on the command line.
+[JEP 158](https://openjdk.java.net/jeps/158) introduces the `-Xlog` option as a common logging system for all components of a Java virtual machine. To avoid confusion with the reference implementation, the [`-Xsyslog`](xsyslog.md) option replaces the existing OpenJ9 [`-Xlog`](xlog.md) option for message logging. For compatibility with the reference implementation, a limited set of `-Xlog` suboptions are supported.
 
-- Setting `-XX:-LegacyXlogOption` (default) causes the JVM to process the `-Xsyslog` option and process the `-Xlog` option only for GC log requests (`-Xlog:gc[:stderr|:file=<filename>]`).
-  - If `-Xlog` GC log requests are set, these options are mapped to the equivalent OpenJ9 verbose GC command line options. For more information, see
-[`-Xlog`](xlog.md).
-- Setting `-XX:+LegacyXLogOption`, processes the `-Xlog` option as an equivalent option to `-Xsyslog`.
+A new option, [`-XX:[+|-]LegacyXlogOption`](xxlegacyxlogoption.md), controls how `-Xlog` is processed when set on the command line.
+
+- When `-XX:-LegacyXlogOption` is set, the `-Xlog` option is recognized when a form of this option  runs that requests garbage collection (GC) logging.
+    - If any `-Xlog` GC log requests are set, these options are mapped to the equivalent OpenJ9 verbose GC command line options. For more information, see [`-Xlog`](xlog.md).
+- Setting `-XX:+LegacyXLogOption` provides backward compatibility with the legacy `-Xlog` option, which can be specified on the command line with the parameters documented for the `-Xsyslog` option. That is, these options can be used interchangeably. If you rely on the legacy `-Xlog` option and cannot easily migrate to the `-Xsyslog` option, you must set this option on the command line.
 
 
-### Support the JAVA_OPTIONS environment variable
+### Support for the `JAVA_OPTIONS` environment variable
 
-Support the `JAVA_OPTIONS` environment variable for compatibility with Hotspot. `JAVA_OPTIONS` can be used to set command line options as described in [OpenJ9 command-line options](cmdline_specifying.md) and [Environment variables](env_var.md). Options specified in `JAVA_OPTIONS` can be overridden by `OPENJ9_JAVA_OPTIONS`.
+For compatibility with the reference implementation, OpenJ9 now supports the `JAVA_OPTIONS` environment variable. This environment variable  can be used to set command line options, as described in [OpenJ9 command-line options](cmdline_specifying.md) and [Environment variables](env_var.md). Options specified by `JAVA_OPTIONS` can be overridden by options specified by `OPENJ9_JAVA_OPTIONS`.
 
 
 ### `-XX:[+|-]PortableSharedCache` option behavior update
 
-The `-XX:[+|-]PortableSharedCache` option is now supported on s390 and POWER platforms. AOT-compiled code generated with this option is guaranteed to be portable across IBM&reg; z10 or newer microarchitectures on s390 platforms and IBM POWER8&reg; or newer microarchitectures on POWER platforms. See [`-XX:[+|-]PortableSharedCache`](xxportablesharedcache.md) for more details about this option.
+The `-XX:[+|-]PortableSharedCache` option is now supported on IBM Z&reg; and POWER&reg; platforms. AOT-compiled code that is generated with this option is guaranteed to be portable across IBM z10 or newer microarchitectures on IBM Z platforms and IBM POWER8&reg; or newer microarchitectures on POWER platforms. See [`-XX:[+|-]PortableSharedCache`](xxportablesharedcache.md) for more details about this option.
 
 
 ### ![Start of content that applies to AIX Java 15+](cr/java15plus.png) `-XX:[+|-]ShareAnonymousClasses` option behavior update
 
-The `-XX:[+|-]ShareAnonymousClasses` option currently enables and disables the storage of VM anonymous classes in the shared classes cache. In OpenJDK 15 and later versions, this option now also enables and disables the storage of hidden classes in the shared classes cache. See [`-XX:[+|-]ShareAnonymousClasses`](xxshareanonymousclasses.md) for more details about this option.
+The `-XX:[+|-]ShareAnonymousClasses` option currently enables and disables the storage of VM anonymous classes in the shared classes cache. From OpenJDK 15, this option now enables and disables the storage of hidden classes in the shared classes cache. See [`-XX:[+|-]ShareAnonymousClasses`](xxshareanonymousclasses.md) for more details about this option.
 
 
 
@@ -76,4 +77,3 @@ The `-XX:[+|-]ShareAnonymousClasses` option currently enables and disables the s
 To see a complete list of changes between Eclipse OpenJ9 v 0.23.0 and v 0.24.0 releases, see the [Release notes](https://github.com/eclipse/openj9/blob/master/doc/release-notes/0.24/0.24.md).
 
 <!-- ==== END OF TOPIC ==== version0.24.md ==== -->
-
